--- a/gb/20/12/11/n12612217.md
+++ b/gb/20/12/11/n12612217.md
@@ -1,17 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uefmcx3864/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uefmcx3864/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uefmcx3864/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uefmcx3864/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uefmcx3864/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uefmcx3864/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uefmcx3864/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uefmcx3864/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/uefmcx3864/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/uefmcx3864/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uefmcx3864/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uefmcx3864/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uefmcx3864/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uefmcx3864/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uefmcx3864/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>106众议员和彭斯支持德州起诉四摇摆州</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/GettyImages-1059173870-600x400.jpg" />
 <h6>德州总检察长起诉四个摇摆州后，截至周四（12月10日），川普（特朗普）总统和6个州已经向最高法院（图）提交动议加入诉讼。国会众议院中，有106名共和党议员支持德州诉讼，挑战2020年大选。 (Mark Wilson/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年12月11日讯】（大纪元记者夏雨综合报导）德州起诉四个摇摆州后，截至周四（12月10日），川普（特朗普）总统和6个州已经向<ahref="https://github.com/uefmcx3864/djy/blob/master/gb/tag/%E6%9C%80%E9%AB%98%E6%B3%95%E9%99%A2.md#1">最高法院</a>提交动议加入诉讼。国会众议院中，有106名共和党议员支持德州诉讼，挑战2020年大选。</p>
-<p>副总统<ahref="https://github.com/uefmcx3864/djy/blob/master/gb/tag/%E5%BD%AD%E6%96%AF.md#1">彭斯</a>周四也公开支持德州诉讼和川普加入诉讼。他表示，川普诉讼到<ahref="https://github.com/uefmcx3864/djy/blob/master/gb/tag/%E6%9C%80%E9%AB%98%E6%B3%95%E9%99%A2.md#1">最高法院</a>理所当然。</p>
-<p>“我们将继续战斗，直到计算出每一张合法选票为止。我们将继续战斗，直到剔除所有非法选票为止。”<ahref="https://github.com/uefmcx3864/djy/blob/master/gb/tag/%E5%BD%AD%E6%96%AF.md#1">彭斯</a>周四在参加乔治亚州奥古斯塔举行的参议员决选助选集会时说。</p>
+	<p>【大纪元2020年12月11日讯】（大纪元记者夏雨综合报导）德州起诉四个摇摆州后，截至周四（12月10日），川普（特朗普）总统和6个州已经向<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9C%80%E9%AB%98%E6%B3%95%E9%99%A2.md#1">最高法院</a>提交动议加入诉讼。国会众议院中，有106名共和党议员支持德州诉讼，挑战2020年大选。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow: hidden;"><a style="width: 100%; height: 170px;" src="https://player.captivate.fm/episode/8ed605bf-45e2-4a96-8125-d5cd44cfc113" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多新闻请至<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<p>副总统<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BD%AD%E6%96%AF.md#1">彭斯</a>周四也公开支持德州诉讼和川普加入诉讼。他表示，川普诉讼到<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9C%80%E9%AB%98%E6%B3%95%E9%99%A2.md#1">最高法院</a>理所当然。</p>
+<p>“我们将继续战斗，直到计算出每一张合法选票为止。我们将继续战斗，直到剔除所有非法选票为止。”<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BD%AD%E6%96%AF.md#1">彭斯</a>周四在参加乔治亚州奥古斯塔举行的参议员决选助选集会时说。</p>
 <p>106名议员周四请求美国最高法院批准提交的法庭之友陈述，要求大法官维持州议会的权力，以确定选举总统选举人的方式，并确定非立法机构官员制定选举规则下、选票投票和计票是否合乎宪法。</p>
+<p>截至周四，已经有6州和法律团队申请以原告身份介入德州诉讼。</p>
+<p>川普周四晚针对德州案发推说：“19个州正在为我们而战，几乎是前所未闻的支持！”</p>
+<p>“（获得）全国各地的大力支持。我们只是想从那些将做出（这个）国家历史上最重要决定之一的人那里，获得勇气和智慧。上帝祝福你们！”川普写道。</p>
 <h2>众议员：州立法机关宪法授予权利被篡夺</h2>
-<p>众议员们在他们的陈述（<ahref="https://www.supremecourt.gov/DocketPDF/22/22O155/163403/20201210153048641_Texas%20v.%20Pennsylvania%20Amicus%20Brief%20of%20106%20Representatives.pdf">pdf</a>）中写道：“这份陈述书展示（我们）作为国会议员的关注，无数成千上万的选民对此也表示赞同，认为2020年总统大选所涉及的违宪违规行为，对其结果和美国选举制度诚信产生了怀疑。”</p>
+<p>众议员们在他们的陈述<ahref="https://www.supremecourt.gov/DocketPDF/22/22O155/163403/20201210153048641_Texas%20v.%20Pennsylvania%20Amicus%20Brief%20of%20106%20Representatives.pdf">pdf</a>）中写道：“这份陈述书展示（我们）作为国会议员的关注，无数成千上万的选民对此也表示赞同，认为2020年总统大选所涉及的违宪违规行为，对其结果和美国选举制度诚信产生了怀疑。”</p>
 <p>“在2020年大选之前几个月，州和地方行为者都故意修改了这些（选举）规则。”</p>
 <p>“州长、州务卿、选举官员、州法院、联邦法院和私人政党多次篡夺这些州立法机关确定选举人规则的明确授权。”陈述书写道。</p>
 <p>国会议员们补充说，这种篡夺在很大程度上导致了前所未有的严重选举欺诈和违规指控。</p>
@@ -27,52 +33,48 @@
 <p>乔丹继续说，没有任何事与历史上发生的事情相吻合。“这就是为什么我认为至关重要的是，我们竭尽所能要弄清楚发生了什么。”</p>
 <p>他说：“有7500万人投票支持川普总统……近6000万人认为选举被盗”，三分之一的选民不信任投票。</p>
 <p>“那是不正常的情况。”他说。</p>
+<h2>6州和法律团队申请以原告身份介入德州诉讼</h2>
 <p>周一晚上，德州总检察长在最高法院对乔治亚州、密歇根州、宾夕法尼亚州和威斯康星州提起诉讼，以推翻这四州认证的拜登获胜的选举结果，保护2020年大选诚信。周三，川普以个人身份也向最高法院提出动议，加入德州诉讼案。</p>
+<p>周四，由司法基金会（Justice Foundation）和托马斯莫尔协会（Thomas More Society）的阿米斯塔德项目（Amistad Project）代表的“州立法者和选民”提出动议，希望以原告身份介入和参与本案； 他们的申诉已经提起。</p>
 <p>周四，密苏里州、阿肯色州、路易斯安那州、密西西比州、南卡罗来纳州和犹他州等六州向最高法院提交加入动议（motion to intervene），要求加入德州对四个摇摆州的选举诉讼。</p>
 <p>另有12个州的总检察长周三提交非当事人陈述书，支持德州诉讼；周四，哥伦比亚特区代表22个蓝州和领地的总检察长提交法律摘要，反对德州诉讼，这些州的总检察长都是民主党人。</p>
 <p>（英文大纪元记者Janita Kan对本文做出贡献）</p>
 <p>责任编辑：叶紫微#</p>
+<p>&nbsp;</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12606261.md#1">【大选更新12.9】川普：我们将记住“勇气”一词</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12607509.md#1">17州支持德州诉讼 向美最高院提告4摇摆州</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/10/n12608440.md#1">川普向最高法院交动议 加入德州诉四摇摆州</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/10/n12609480.md#1">被川普邀请为德州诉四州案辩论 克鲁兹同意</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/12/9/n12606261.md#1">【大选更新12.9】川普：我们将记住“勇气”一词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/12/9/n12607509.md#1">17州支持德州诉讼 向美最高院提告4摇摆州</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/12/10/n12608440.md#1">川普向最高法院交动议 加入德州诉四摇摆州</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/12/10/n12609480.md#1">被川普邀请为德州诉四州案辩论 克鲁兹同意</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240051.md#1" target="_blank">纽约州奥伯尼市长宣布5月13日法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10088158.md#1" target="_blank">林辉：民国长春市长厚颜事共 文革差点被打死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/11/20/n12563507.md#1">【成吉思汗】花剌子模灭国 丘处机道破天机</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/4/n12596113.md#1">【馨香雅句】开启中国服饰文化的竟是她</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/10/n12611175.md#1">【直播预告】威斯康星法院举行选举听证会</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/10/n12610955.md#1">【新闻大家谈】民主党3大鳄出事 18州挺德州诉讼</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/10/n12611896.md#1">【秦鹏直播】德州诉讼案为何注定改变美国？</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12605623.md#1">习近平“高参”泄天机 惊呆美国网民</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/8/n12604949.md#1">坎普的“巧合” 中共渗透美国州长遭曝光</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12607112.md#1">川普政府制裁一名中共政协委员兼黑帮头目</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12607515.md#1">中共列演员四宗罪 传刘亦菲带编剧开工犯忌</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12605082.md#1">郑爽批当今直播带货吃相难看 自曝是赵丽颖粉</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/8/n12604566.md#1">病毒报告出乌龙 港星吴千语轰大陆机构不靠谱</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/10/n12610375.md#1">户田惠梨香与松坂桃李宣布结婚：会相互扶持</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12607106.md#1">准时到片场竟成优点 刘德华质疑演员标准下降</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/2/n12590942.md#1">燕麦可以当减肥餐  一天该吃多少分量？</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/3/n12594093.md#1">一天20步就能瘦！日医师这样走路 告别肥胖酸痛</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/9/n12605528.md#1">什么？ 欧洲又有三国出现神秘金属柱子</a></li>
-<li><a href="https://github.com/uefmcx3864/djy/blob/master/gb/20/12/4/n12594856.md#1">抗癌12年身体变更好 北医教授分享4个秘诀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uefmcx3864/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uefmcx3864/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/11/n12612217.htm">106众议员和彭斯支持德州起诉四摇摆州</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/11/n12612217.htm">106众议员和彭斯支持德州起诉四摇摆州</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uefmcx3864/djy/blob/master/gb/20/12/11/n12612217.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uefmcx3864/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uefmcx3864/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uefmcx3864/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uefmcx3864/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uefmcx3864/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/12/11/n12612217.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
